[package]
name = "const-gen"
version = "1.6.9"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["Griffin O'Neill <gsoneill1003@gmail.com>"]
description = """
A crate for generating (relatively) complex compile-time constants in rust.
"""
edition = "2018"
keywords = ["const", "constants", "compile-time", "build"]
homepage = "https://github.com/Eolu/const-gen"
repository = "https://github.com/Eolu/const-gen"
categories = ["accessibility", "config", "development-tools::build-utils"]
documentation = "https://docs.rs/const_gen"

[lib]
name = "const_gen"
path = "src/lib.rs"

[features]
default = ["std", "derive", "phf"]
std = []
phf = ["std"]
derive = ["const-gen-derive"]
either = ["dep:either"]

[dependencies]
const-gen-derive = { version = "1.1.7", optional = true }
either = { version = "1.13.0", optional = true }
